# v2.1.2

## Changes
+ Recalculating vertex IDs now works with a small distance allowed between vertices, allowing to properly recalculate to EA ID counts

# v2.1.1

## Bugfixes
+ Add-on would fail to load when not connected to the internet, this has now been fixed

# v2.1.0

## Changes
+ Added an update checker, checks for updates every time Blender first loads the add-on

## Bugfixes
+ Having loose vertices on export will now provide a desciptive error message